# turbo-enigma

./: .flake8  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  env.example  pyproject.toml
apps/balance/: admin.py  apps.py  constants.py  exceptions.py  models.py  services.py  signals.py  tasks.py  tests.py
apps/balance/migrations/: 0001_initial.py  0002_alter_transaction_options_transaction_created_at.py  0003_transaction_action.py  0004_alter_transaction_options_balance_currency.py  0005_transaction_status.py  0006_alter_balance_amount_alter_transaction_amount.py
apps/balance/rest/: serializers.py  urls.py  views.py
apps/base/: exceptions.py  openapi_schema_generator.py  services.py
apps/base/rest/: urls.py
apps/users/: admin.py  validators.py
apps/users/management/commands/: create_bank_in_system.py  create_super_user.py
apps/users/migrations/: 0001_initial.py
apps/users/rest/: serializers.py  urls.py  views.py
config/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
docs/: FutureFix.md  TestTask.md
