[tool.poetry]
name = "balance-system"
version = "0.1.0"
description = ""
authors = ["Airenik Melkonyan <melkonyanair@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.1"
djangorestframework = "^3.15.2"
python-dotenv = "^1.0.1"
djoser = "^2.2.3"
drf-yasg = "^1.21.7"
django-prometheus = "^2.3.1"
psycopg2 = "^2.9.9"
celery = "^5.4.0"
redis = "^5.1.1"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
isort = "^5.13.2"
flake8 = "^7.1.1"
django-stubs = "^5.1.0"
django-extensions = "^3.2.3"
ipython = "^8.28.0"
django-debug-toolbar = "^4.4.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
skip = "migrations"
